[package]
name = "ev3dev-lang-rust"
version = "0.10.1"
authors = ["Lars Westermann <lars-westermann@live.de>"]

description = "Rust language bindings for ev3dev"
keywords = ["ev3", "ev3dev", "lego", "mindstorms"]
categories = ["api-bindings", "embedded", "hardware-support"]

license = "MIT"

repository = "https://github.com/pixix4/ev3dev-lang-rust"
readme = "README.md"

[features]
screen = ["framebuffer", "image"]

[dependencies]
ev3dev-lang-rust-derive = { path = "ev3dev_lang_rust_derive", version="0.10" }
libc = "0.2"
framebuffer = { version = "0.2.0", optional = true }
image = { version = "0.23.8", optional = true }

[workspace]
members = [
    "ev3dev_lang_rust_derive",
    "examples/color-sensor",
    "examples/buttons",
    "examples/screen",
    "examples/infrared-sensor"
]
