[package]
name = "ev3dev-lang-rust"
version = "0.13.0"
edition = "2021"
authors = ["Lars Westermann <rust@lars-westermann.de>"]

description = "Rust language bindings for ev3dev"
keywords = ["ev3", "ev3dev", "lego", "mindstorms"]
categories = ["api-bindings", "embedded", "hardware-support"]

license = "MIT"

repository = "https://github.com/pixix4/ev3dev-lang-rust"
readme = "README.md"

[features]
default = ["ev3"]
screen = ["framebuffer", "image"]
override-driver-path = []
ev3 = []
brickpi = []
brickpi3 = []

[dependencies]
ev3dev-lang-rust-derive = { path = "ev3dev_lang_rust_derive", version="0.10" }
libc = "0.2"
framebuffer = { version = "0.3", optional = true }
image = { version = "0.24", optional = true }

[workspace]
members = [
    "ev3dev_lang_rust_derive"
]

[profile.release]
lto = true
strip = "debuginfo"
opt-level = "z"

[[example]]
name = "screen"
required-features = ["screen"]

[package.metadata.docs.rs]
features = ["ev3", "screen"]
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "buttons"
required-features = ["ev3"]

[[test]]
name = "ev3"
required-features = ["ev3"]

[[test]]
name = "brickpi"
required-features = ["brickpi"]

[[test]]
name = "brickpi3"
required-features = ["brickpi3"]

[[test]]
name = "override-driver-path"
required-features = ["override-driver-path"]
