[package]
name = "ev3dev-lang-rust-derive"
version = "0.5.0"
authors = ["Lars Westermann <lars-westermann@live.de>"]

description = "Derive macros for ev3dev_lang_rust"

license = "MIT"

repository = "https://github.com/pixix4/ev3dev-lang-rust"
readme = "README.md"

[badges]
travis-ci = { repository = "pixix4/ev3dev-lang-rust", branch = "master" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
